ARROW-7740: [C++] Fix StructArray::Flatten corruption

Flatten would modify in-place the data_->child_data ArrayData if the
currently flatten array is a slice. The parent child_data values also be
modified.